<resources>
    <string name="app_name">Water Watcher</string>
    <string name="title_activity_device_select">Select Device</string>
    <string name="title_activity_graph">Graphing</string>
    <string name="title_activity_settings">Update Settings</string>
    <string name="title_activity_instructions">Help</string>
    <string name="device_connected">Device </string>
    <string name="device_disconnected">Device was disconnected.</string>
    <string name="failed_to_connect">Failed to connect.</string>
    <string name="no_microbit_connected">No micro:bit connected!</string>
    <string name="location_request">Location permission is required to make Bluetooth connections: please restart the app and grant location permission to continue.</string>
    <string name="old_version_location_message">This app requires location permissions to allow Bluetooth to function correctly. If the app is not working, please ensure location permissions have been granted.</string>
    <string name="bluetooth_enabled">Please make sure Bluetooth is enabled and permissions are granted before scanning.</string>
    <string name="must_pair_device">Device must be paired before connecting!</string>
    <string name="bonded_prefix">"(BONDED) "</string>
    <string name="microbit_name_start">BBC micro:bit</string>
    <string name="unknown_device">UNKNOWN DEVICE</string>
    <string name="scan">Scan</string>
    <string name="stop_scanning">Stop Scanning</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="device_select_help">
        "To connect to the micro:bit, first make sure that it is running the correct program"
        "(where passkey pairing is disabled), and that it is paired with your smartphone."
        "Detailed instructions on this process can be found here:"
        "https://makecode.microbit.org/reference/bluetooth/bluetooth-pairing\n\nOnce"

        "the micro:bit is paired, make sure that it is in Connection Mode by pressing Button B"
        "(the rightmost button) then simply scan and select your micro:bit (highlighted in green)"
        "from the list below."
    </string>
    <string name="introduction_instructions_text">
        "In order to explain some features of the Water Watcher app and its associated micro:bit"
        "program, there are some explanations and instructions provided on this page. To begin, use the navigation bar on the left."
    </string>
    <string name="connection_instructions_text">
        "To reselect a device to connect to at any time, simply pick "Select Device" from the"
        "navigation bar within the app, which will allow you to re-scan for available devices and"
        "select the one you'd like to connect to. Please note that re-entering this screen will"
        "cause the current device to be disconnected."
    </string>
    <string name="microbit_instructions_header">Using the micro:bit program</string>
    <string name="microbit_instructions_text_1">
        To interact with the micro:bit, use either or both of its two buttons, Button A (left) and Button B (right).
    </string>
    <string name="microbit_button_image_content_description">Button A on the left of the micro:bit, Button B on the right</string>
    <string name="microbit_instructions_text_2">
        "When the micro:bit is first booted, it will need to be calibrated. Assuming the micro:bit"
        "is strapped onto the tap, first press either button while the tap is off, and then again"
        "when the tap is running. This will calibrate the micro:bit to the tap in question, and"
        "this calibration will be saved in future. At this point, the micro:bit will begin checking"
        " the tap - using vibration levels measured from the accelerometer, and compared against"
        "the results from caibration - continually. While the tap is running, a timer will count"
        "down and an alert will trigger when that timer reaches zero. To turn off the alert or"
        "reset the timer at any point, simply switch off the tap."
    </string>
    <string name="microbit_accelerometer_image_content_description">The micro:bit\'s accelerometer measuring movement in the X, Y and Z axis</string>
    <string name="microbit_instructions_text_3">
        "The micro:bit's program has five different "modes", used for different features. To"
        "navigate between these modes, the micro:bit's buttons are used."
    </string>
    <string name="microbit_instructions_text_4_list_content_1">
        Calibration Mode: this is initiated the first time the micro:bit is booted. The micro:bit can be recalibrated by pressing Button A.
    </string>
    <string name="microbit_instructions_text_4_list_content_2">
        Vibration Checking Mode: the main part of the program, where the tap is continually checked, and the timer and alert is handled.
    </string>
    <string name="microbit_instructions_text_4_list_content_3">
        Connection Mode: this is where the micro:bit can connect to the smartphone app. Press Button B to enter this mode, at which point the micro:bit will wait for a connection to be initiated. Simply press Button B again to manually exit it if no connection is made.
    </string>
    <string name="microbit_instructions_text_4_list_content_4">
        Settings Mode: once the micro:bit is connected to the smartphone, pressing Button B again will enter Settings Mode. Here, the app can update various micro:bit settings over Bluetooth, such as the length of the timer.
    </string>
    <string name="microbit_instructions_text_4_list_content_5">
        Reset Mode: pressing both Button A and Button B simultaneously will enter the micro:bit into Reset Mode. Press both buttons again to reset the program completely, removing all stored values and reverting it to its state as if it had been booted for the first time. Press either button individually to cancel and exit this mode.
    </string>
    <string name="graphing_instructions_header">Graphing</string>
    <string name="graphing_instructions_text_1">
        "Once the micro:bit is connected, it will transmit the values measured from its"
        "accelerometer to the app. This data is automatically graphed in real-time, and the"
        "generated graph can be scrolled through to inspect the data as it comes in, or that"
        "was received earlier on. The graph will show the values from the accelerometer's X and Y"
        "axes, as well as the absolute value, calculated by the square root of the sum of the"
        "squares of the values from both axes. These values are measured in milli-g, and are"
        "plotted against time in seconds."
    </string>
    <string name="graphing_instructions_text_2">
        "This data can be exported as a CSV file to external storage. Simply press the export"
        "button (blue, in the bottom right of the screen) and the data points for the X, Y and"
        "absolute values, as well as the corresponding time in milliseconds, will be exported to"
        "the Water Watcher folder in external storage. This CSV contains a header as its first"
        "line, and then each following line contains the time and accelerometer values for each"
        "data point."
    </string>
    <string name="settings_instructions_header">Settings</string>
    <string name="settings_instructions_text_1">
        "The app can update various micro:bit settings over Bluetooth. To do this, first make sure"
        "the micro:bit is connected and in Settings Mode. To send the current settings to the app"
        "to be displayed, press Button A while in this mode. To update the settings on the"
        "micro:bit, enter the new values in the app and press the button to send these settings"
        "over BLE. To exit this mode on the micro:bit, either update the settings and the mode will"
        "be exited automatically, or press the button in the app to cancel updating settings. You"
        "can also revert to the default values in the app by pressing the button to reset values to"
        "their defaults. This will not revert the settings on the micro:bit until those values are"
        "sent over Bluetooth.\n\nAll input is validated to make sure that the values are"
        "appropriate for all settings. The settings and their validation is as follows:"
    </string>
    <string name="validation_table_image_content_description">A table showing the names, descriptions and validations of each updatable setting</string>
    <string name="settings_instructions_text_2">
        "The micro:bit measures values between -1024 and 1024 milli-g on each axis. The threshold"
        "is the absolute value of both axes, and √1024² + 1024² ≈ 1448. The micro:bit's accelerometer will only accept certain periods; although it will also accept a period of 1ms, due to the polling frequency that would cause it will result in the Water Watcher program crashing due to memory issues. All other validation is"
        "done to ensure that all values are sensible in context."
    </string>
    <string name="further_info_header">Further Information</string>
    <string name="further_info_text">
        "This app and the accompanying micro:bit program was made by Aaron Cuthbertson. (https://twitter.com/teamshortcut)"
        "For further information, you can find the GitHub repository for this project among those at: https://github.com/teamshortcut"
    </string>
    <string name="microbit_error_title">micro:bit Error</string>
    <string name="microbit_error_content">
        Unable to find the required services on the connected device. Please ensure the selected device is a BBC micro:bit, and that it is running the associated program and has the necessary BLE services. (Accelerometer and UART)\n\nApp functionality may not work correctly without these services. Would you like to check the device again for the required BLE services?"
    </string>
    <string name="device_services_error">Could not find the BLE services required for app functionality.</string>
    <string name="graph_axis_title_time">Time (seconds)</string>
    <string name="graph_axis_title_g">milli-g</string>
    <string name="graph_plot_title_x">X</string>
    <string name="graph_plot_title_y">Y</string>
    <string name="graph_plot_title_absolute_value">Absolute Value</string>
    <string name="file_error">There was an error while exporting graph data to an external file.</string>
    <string name="storage_request">Permission to write to external storage is required to export your data: please restart the app and grant permissions to continue.</string>
    <string name="old_version_storage_message">To export your data, please make sure that this app has permissions to write to external storage.</string>
    <string name="exported_success">Graph data was successfully exported as a CSV file to %1$s</string>
    <string name="exported_failure">There was an error accessing external storage, graph data could not be updated.</string>
    <string name="no_data_to_export">No available graph data to export. Please try again.</string>
    <string-array name="periods">
        <item />
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>80</item>
        <item>160</item>
        <item>640</item>
    </string-array>
    <string name="setting_timer_name">Timer Length (Seconds)</string>
    <string name="setting_period_name">Accelerometer Period (milliseconds)</string>
    <string name="setting_samples_name">Number of Accelerometer Samples</string>
    <string name="setting_x_name">X</string>
    <string name="setting_y_name">Y</string>
    <string name="setting_threshold_name">Threshold</string>
    <string name="settings_button_send">Send Settings over BLE</string>
    <string name="settings_button_cancel">Cancel Updating Settings</string>
    <string name="settings_button_reset">Reset Settings Input to Default</string>
</resources>