<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/device_select_drawer_item"
            android:icon="@drawable/baseline_device_unknown_24"
            android:title="@string/title_activity_device_select" />
        <item
            android:id="@+id/graph_drawer_item"
            android:icon="@drawable/baseline_show_chart_24"
            android:title="@string/title_activity_graph" />
        <item
            android:id="@+id/settings_drawer_item"
            android:icon="@drawable/baseline_settings_applications_24"
            android:title="@string/title_activity_settings" />
        <item
            android:id="@+id/instructions_drawer_item"
            android:icon="@drawable/outline_info_black_24"
            android:title="@string/title_activity_instructions" />
    </group>
</menu>